--- a/src/styles/Library.css
+++ b/src/styles/Library.css
@@ -1,18 +1,7 @@
-.container{
-  padding-top: 50px;
-  background-color: #151515;
-  /* calculate the height to adjust for navbar */
-  min-height: calc(100vh - 50px);
-  color: white;
-}
 
-.content-container{
-  /* adjust margin to account for sidebar */
-  /* margin-left: 50px; */
-}
 
 .featured-content{
-  height: 50vh;
+  height: 30vh;
   padding: 50px;
 }
 
@@ -23,5 +12,8 @@
 .library-nav{
   width: 100%;
   height: 50px;
-  background-color: black;
+  background-color: white;
+  position: sticky;
+  top: 50px;
+  z-index: 100;
 }
